--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Augment Fashion</title>
-    </head>
-    <body>
-        <header>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse magni eveniet minima mollitia, quos ab dignissimos consequuntur molestias assumenda, placeat omnis, reiciendis obcaecati distinctio natus ea quam reprehenderit? Asperiores, eligendi.</p>
-        </header>
-    </body>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Augment Fashion</title>
+</head>
+<body style="background-color: #9154e0">
+    <H1 style="color:#ffffff; font-weight: bold; font-size: 100px; font-family: Arial, Helvetica, sans-serif; align-content: center;">AUGMENT FASHION</H1>
+    <H2>Moda a tu medida</H2>
+</body>
 </html>
