--- a/index.html
+++ b/index.html
@@ -4,10 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/style.css">
     <title>Augment Fashion</title>
 </head>
-<body style="background-color: #9154e0">
-    <H1 style="color:#ffffff; font-weight: bold; font-size: 100px; font-family: Arial, Helvetica, sans-serif; align-content: center;">AUGMENT FASHION</H1>
-    <H2>Moda a tu medida</H2>
+<body>
+    <header>
+        <div class="top-header">
+            <div id="titulo">
+                AUGMENT FASHION
+            </div>
+            <div class="sub-header">
+                <img class="icon-topHeader" src="Images/icons/user-icon.png" alt="User-Icon" width="40px">
+            </div>
+        </div>
+    </header>
+    <nav>
+        nav
+    </nav>
+    <section id="wrap">
+        wrap
+        <main>
+            main
+        </main>
+        <aside>
+            aside
+        </aside>
+    </section>
+    <footer>
+        footer
+    </footer>
 </body>
 </html>
