--- a/index.html
+++ b/index.html
@@ -9,18 +9,40 @@
 </head>
 <body>
     <header>
-        <div class="top-header">
-            <div id="titulo">
-                AUGMENT FASHION
-            </div>
-            <div class="sub-header">
-                <img class="icon-topHeader" src="Images/icons/user-icon.png" alt="User-Icon" width="40px">
-            </div>
+        <div class="header-right">
+            
+        </div>
+        <!---->
+        <div class="header-left">
+            <button id="btnShop">
+                <img class="icon-Header" src="Images/icons/shopping-car-icon.png" alt="User-Icon">
+            </button>
+            <button id="btnUser">
+                <img class="icon-Header" src="Images/icons/user-icon.png" alt="User-Icon">
+            </button>
+            
+        </div>
+        <div class="header-center">
+            <img class="icon-Header" src="Images/logo.png" alt="User-Icon">
         </div>
     </header>
     <nav>
-        nav
+        <input type="checkbox" id="mostrar-menu" role="button">
+        <label for="mostrar-menu" id="lblMenu">
+            <img class="icon-Header" src="Images/icons/menu-icon.png" alt="Main-Icon" >
+        </label>
+        <div id="menu">
+            <ul>
+                <li class="optionMenu"><a href="#">INICIO</a></li>
+                <li class="optionMenu"><a href="#">Categorias</a></li>
+                <li class="optionMenu"><a href="#">¿Quienes Somos?</a></li>
+                <li class="optionMenu"><a href="#">Contacto</a></li>
+            </ul>
+        </div>
     </nav>
+    <section id="slider">
+        Slider
+    </section>
     <section id="wrap">
         wrap
         <main>
