--- a/index.html
+++ b/index.html
@@ -9,13 +9,9 @@
 </head>
 <body>
     <header>
-        <div class="header-right">
-            
-        </div>
-        <!---->
         <div class="header-left">
             <button id="btnShop">
-                <img class="icon-Header" src="Images/icons/shopping-car-icon.png" alt="User-Icon">
+                <img class="icon-Header" src="Images/icons/shopping-car-icon-ligth.png" alt="User-Icon">
             </button>
             <button id="btnUser">
                 <img class="icon-Header" src="Images/icons/user-icon.png" alt="User-Icon">
@@ -23,17 +19,17 @@
             
         </div>
         <div class="header-center">
-            <img class="icon-Header" src="Images/logo.png" alt="User-Icon">
+            <img class="icon-Header" src="Images/AugmentFashion_LogoLigth.png" alt="User-Icon">
         </div>
     </header>
     <nav>
         <input type="checkbox" id="mostrar-menu" role="button">
         <label for="mostrar-menu" id="lblMenu">
-            <img class="icon-Header" src="Images/icons/menu-icon.png" alt="Main-Icon" >
+            <img class="icon-Header" src="Images/icons/menu-icon-ligth.png" alt="Main-Icon" >
         </label>
         <div id="menu">
             <ul>
-                <li class="optionMenu"><a href="#">INICIO</a></li>
+                <li class="optionMenu"><a href="index.html">INICIO</a></li>
                 <li class="optionMenu"><a href="#">Categorias</a></li>
                 <li class="optionMenu"><a href="#">¿Quienes Somos?</a></li>
                 <li class="optionMenu"><a href="#">Contacto</a></li>
@@ -41,17 +37,188 @@
         </div>
     </nav>
     <section id="slider">
-        Slider
+        <img src="Images/fashion01.jpg" alt="">
     </section>
-    <section id="wrap">
-        wrap
-        <main>
-            main
-        </main>
-        <aside>
-            aside
-        </aside>
-    </section>
+    <main>
+        <section class="container">
+            <H2 class="title-section">LO MAS VENDIDO</H2>
+            <div class="content-section">
+                <div class="content-product">
+                    <img src="Images/image.png" alt="Imagen Prueba">
+                    <H3>Nombre Producto</H3>
+                    <p class="desciption-product"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet recusandae officiis quae voluptate vel exercitationem accusamus facere voluptatibus! Distinctio placeat quod debitis incidunt doloremque facere, dolore quae similique molestias laboriosam. </p>
+                    <div class="ranking">
+                        <p>Asigne una clasificacion</p>
+                        <p class="clasificacion">
+                            <input id="radio1" type="radio" name="estrellas" value="5"><!--
+                            --><label for="radio1">★</label><!--
+                            --><input id="radio2" type="radio" name="estrellas" value="4"><!--
+                            --><label for="radio2">★</label><!--
+                            --><input id="radio3" type="radio" name="estrellas" value="3"><!--
+                            --><label for="radio3">★</label><!--
+                            --><input id="radio4" type="radio" name="estrellas" value="2"><!--
+                            --><label for="radio4">★</label><!--
+                            --><input id="radio5" type="radio" name="estrellas" value="1"><!--
+                            --><label for="radio5">★</label>
+                          </p>
+                    </div>
+                </div>
+                <div class="content-product">
+                    <img src="Images/image.png" alt="Imagen Prueba">
+                    <H3>Nombre Producto</H3>
+                    <p class="desciption-product"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet recusandae officiis quae voluptate vel exercitationem accusamus facere voluptatibus! Distinctio placeat quod debitis incidunt doloremque facere, dolore quae similique molestias laboriosam. </p>
+                    <div class="ranking">
+                        <p>Asigne una clasificacion</p>
+                        <p class="clasificacion">
+                            <input id="radio1" type="radio" name="estrellas" value="5"><!--
+                            --><label for="radio1">★</label><!--
+                            --><input id="radio2" type="radio" name="estrellas" value="4"><!--
+                            --><label for="radio2">★</label><!--
+                            --><input id="radio3" type="radio" name="estrellas" value="3"><!--
+                            --><label for="radio3">★</label><!--
+                            --><input id="radio4" type="radio" name="estrellas" value="2"><!--
+                            --><label for="radio4">★</label><!--
+                            --><input id="radio5" type="radio" name="estrellas" value="1"><!--
+                            --><label for="radio5">★</label>
+                          </p>
+                    </div>
+                </div>
+                <div class="content-product">
+                    <img src="Images/image.png" alt="Imagen Prueba">
+                    <H3>Nombre Producto</H3>
+                    <p class="desciption-product"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet recusandae officiis quae voluptate vel exercitationem accusamus facere voluptatibus! Distinctio placeat quod debitis incidunt doloremque facere, dolore quae similique molestias laboriosam. </p>
+                    <div class="ranking">
+                        <p>Asigne una clasificacion</p>
+                        <p class="clasificacion">
+                            <input id="radio1" type="radio" name="estrellas" value="5"><!--
+                            --><label for="radio1">★</label><!--
+                            --><input id="radio2" type="radio" name="estrellas" value="4"><!--
+                            --><label for="radio2">★</label><!--
+                            --><input id="radio3" type="radio" name="estrellas" value="3"><!--
+                            --><label for="radio3">★</label><!--
+                            --><input id="radio4" type="radio" name="estrellas" value="2"><!--
+                            --><label for="radio4">★</label><!--
+                            --><input id="radio5" type="radio" name="estrellas" value="1"><!--
+                            --><label for="radio5">★</label>
+                          </p>
+                    </div>
+                </div>
+                <div class="content-product">
+                    <img src="Images/image.png" alt="Imagen Prueba">
+                    <H3>Nombre Producto</H3>
+                    <p class="desciption-product"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet recusandae officiis quae voluptate vel exercitationem accusamus facere voluptatibus! Distinctio placeat quod debitis incidunt doloremque facere, dolore quae similique molestias laboriosam. </p>
+                    <div class="ranking">
+                        <p>Asigne una clasificacion</p>
+                        <p class="clasificacion">
+                            <input id="radio1" type="radio" name="estrellas" value="5"><!--
+                            --><label for="radio1">★</label><!--
+                            --><input id="radio2" type="radio" name="estrellas" value="4"><!--
+                            --><label for="radio2">★</label><!--
+                            --><input id="radio3" type="radio" name="estrellas" value="3"><!--
+                            --><label for="radio3">★</label><!--
+                            --><input id="radio4" type="radio" name="estrellas" value="2"><!--
+                            --><label for="radio4">★</label><!--
+                            --><input id="radio5" type="radio" name="estrellas" value="1"><!--
+                            --><label for="radio5">★</label>
+                          </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="container">
+            <H2 class="title-section">LO MAS VENDIDO</H2>
+            <div class="content-section">
+                <div class="content-product">
+                    <img src="Images/image.png" alt="Imagen Prueba">
+                    <H3>Nombre Producto</H3>
+                    <div class="ranking">
+                        <p>Asigne una clasificacion</p>
+                        <p class="clasificacion">
+                            <input id="radio1" type="radio" name="estrellas" value="5"><!--
+                            --><label for="radio1">★</label><!--
+                            --><input id="radio2" type="radio" name="estrellas" value="4"><!--
+                            --><label for="radio2">★</label><!--
+                            --><input id="radio3" type="radio" name="estrellas" value="3"><!--
+                            --><label for="radio3">★</label><!--
+                            --><input id="radio4" type="radio" name="estrellas" value="2"><!--
+                            --><label for="radio4">★</label><!--
+                            --><input id="radio5" type="radio" name="estrellas" value="1"><!--
+                            --><label for="radio5">★</label>
+                          </p>
+                    </div>
+                </div>
+                <div class="content-product">
+                    <img src="Images/image.png" alt="Imagen Prueba">
+                    <H3>Nombre Producto</H3>
+                    <div class="ranking">
+                        <p>Asigne una clasificacion</p>
+                        <p class="clasificacion">
+                            <input id="radio1" type="radio" name="estrellas" value="5"><!--
+                            --><label for="radio1">★</label><!--
+                            --><input id="radio2" type="radio" name="estrellas" value="4"><!--
+                            --><label for="radio2">★</label><!--
+                            --><input id="radio3" type="radio" name="estrellas" value="3"><!--
+                            --><label for="radio3">★</label><!--
+                            --><input id="radio4" type="radio" name="estrellas" value="2"><!--
+                            --><label for="radio4">★</label><!--
+                            --><input id="radio5" type="radio" name="estrellas" value="1"><!--
+                            --><label for="radio5">★</label>
+                          </p>
+                    </div>
+                </div>
+                <div class="content-product">
+                    <img src="Images/image.png" alt="Imagen Prueba">
+                    <H3>Nombre Producto</H3>
+                    <div class="ranking">
+                        <p>Asigne una clasificacion</p>
+                        <p class="clasificacion">
+                            <input id="radio1" type="radio" name="estrellas" value="5"><!--
+                            --><label for="radio1">★</label><!--
+                            --><input id="radio2" type="radio" name="estrellas" value="4"><!--
+                            --><label for="radio2">★</label><!--
+                            --><input id="radio3" type="radio" name="estrellas" value="3"><!--
+                            --><label for="radio3">★</label><!--
+                            --><input id="radio4" type="radio" name="estrellas" value="2"><!--
+                            --><label for="radio4">★</label><!--
+                            --><input id="radio5" type="radio" name="estrellas" value="1"><!--
+                            --><label for="radio5">★</label>
+                          </p>
+                    </div>
+                </div>
+                <div class="content-product">
+                    <img src="Images/image.png" alt="Imagen Prueba">
+                    <H3>Nombre Producto</H3>
+                    <div class="ranking">
+                        <p>Asigne una clasificacion</p>
+                        <p class="clasificacion">
+                            <input id="radio1" type="radio" name="estrellas" value="5"><!--
+                            --><label for="radio1">★</label><!--
+                            --><input id="radio2" type="radio" name="estrellas" value="4"><!--
+                            --><label for="radio2">★</label><!--
+                            --><input id="radio3" type="radio" name="estrellas" value="3"><!--
+                            --><label for="radio3">★</label><!--
+                            --><input id="radio4" type="radio" name="estrellas" value="2"><!--
+                            --><label for="radio4">★</label><!--
+                            --><input id="radio5" type="radio" name="estrellas" value="1"><!--
+                            --><label for="radio5">★</label>
+                          </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="container">
+            <H2 class="title-section">LO MAS VENDIDO</H2>
+            <div class="content-section">
+                <img src="Images/image.png" alt="Imagen Prueba">
+            </div>
+        </section>
+        <section class="container">
+            <H2 class="title-section">LO MAS VENDIDO</H2>
+            <div class="content-section">
+                <img src="Images/image.png" alt="Imagen Prueba">
+            </div>
+        </section>
+    </main>
     <footer>
         footer
     </footer>
