--- a/index.html
+++ b/index.html
@@ -37,7 +37,34 @@
         </div>
     </nav>
     <section id="slider">
-        <img src="Images/fashion01.jpg" alt="">
+        <!--<ul class="slides">
+            <li id="slide1">
+                <img src="Images/Slides/slide01.jpg" alt="slide01">
+            </li>
+            <li id="slide2">
+                <img src="Images/Slides/slide02.jpg" alt="slide01">
+            </li>
+            <li id="slide3">
+                <img src="Images/Slides/slide03.jpg" alt="slide01">
+            </li>
+            <li id="slide4">
+                <img src="Images/Slides/slide04.png" alt="slide01">
+            </li>
+        </ul>
+        <ul class="control">
+            <li>
+                <a href="#slide1">1</a>
+            </li>
+            <li>
+                <a href="#slide2">2</a>
+            </li>
+            <li>
+                <a href="#slide3">3</a>
+            </li>
+            <li>
+                <a href="#slide4">4</a>
+            </li>
+        </ul>-->
     </section>
     <main>
         <section class="container">
@@ -70,16 +97,16 @@
                     <div class="ranking">
                         <p>Asigne una clasificacion</p>
                         <p class="clasificacion">
-                            <input id="radio1" type="radio" name="estrellas" value="5"><!--
-                            --><label for="radio1">★</label><!--
-                            --><input id="radio2" type="radio" name="estrellas" value="4"><!--
-                            --><label for="radio2">★</label><!--
-                            --><input id="radio3" type="radio" name="estrellas" value="3"><!--
-                            --><label for="radio3">★</label><!--
-                            --><input id="radio4" type="radio" name="estrellas" value="2"><!--
-                            --><label for="radio4">★</label><!--
-                            --><input id="radio5" type="radio" name="estrellas" value="1"><!--
-                            --><label for="radio5">★</label>
+                            <input id="radio6" type="radio" name="estrellas" value="5"><!--
+                            --><label for="radio6">★</label><!--
+                            --><input id="radio7" type="radio" name="estrellas" value="4"><!--
+                            --><label for="radio7">★</label><!--
+                            --><input id="radio8" type="radio" name="estrellas" value="3"><!--
+                            --><label for="radio8">★</label><!--
+                            --><input id="radio9" type="radio" name="estrellas" value="2"><!--
+                            --><label for="radio9">★</label><!--
+                            --><input id="radio10" type="radio" name="estrellas" value="1"><!--
+                            --><label for="radio10">★</label>
                           </p>
                     </div>
                 </div>
@@ -90,16 +117,16 @@
                     <div class="ranking">
                         <p>Asigne una clasificacion</p>
                         <p class="clasificacion">
-                            <input id="radio1" type="radio" name="estrellas" value="5"><!--
-                            --><label for="radio1">★</label><!--
-                            --><input id="radio2" type="radio" name="estrellas" value="4"><!--
-                            --><label for="radio2">★</label><!--
-                            --><input id="radio3" type="radio" name="estrellas" value="3"><!--
-                            --><label for="radio3">★</label><!--
-                            --><input id="radio4" type="radio" name="estrellas" value="2"><!--
-                            --><label for="radio4">★</label><!--
-                            --><input id="radio5" type="radio" name="estrellas" value="1"><!--
-                            --><label for="radio5">★</label>
+                            <input id="radio11" type="radio" name="estrellas" value="5"><!--
+                            --><label for="radio11">★</label><!--
+                            --><input id="radio12" type="radio" name="estrellas" value="4"><!--
+                            --><label for="radio12">★</label><!--
+                            --><input id="radio13" type="radio" name="estrellas" value="3"><!--
+                            --><label for="radio13">★</label><!--
+                            --><input id="radio14" type="radio" name="estrellas" value="2"><!--
+                            --><label for="radio14">★</label><!--
+                            --><input id="radio15" type="radio" name="estrellas" value="1"><!--
+                            --><label for="radio15">★</label>
                           </p>
                     </div>
                 </div>
@@ -110,16 +137,16 @@
                     <div class="ranking">
                         <p>Asigne una clasificacion</p>
                         <p class="clasificacion">
-                            <input id="radio1" type="radio" name="estrellas" value="5"><!--
-                            --><label for="radio1">★</label><!--
-                            --><input id="radio2" type="radio" name="estrellas" value="4"><!--
-                            --><label for="radio2">★</label><!--
-                            --><input id="radio3" type="radio" name="estrellas" value="3"><!--
-                            --><label for="radio3">★</label><!--
-                            --><input id="radio4" type="radio" name="estrellas" value="2"><!--
-                            --><label for="radio4">★</label><!--
-                            --><input id="radio5" type="radio" name="estrellas" value="1"><!--
-                            --><label for="radio5">★</label>
+                            <input id="radio16" type="radio" name="estrellas" value="5"><!--
+                            --><label for="radio16">★</label><!--
+                            --><input id="radio17" type="radio" name="estrellas" value="4"><!--
+                            --><label for="radio17">★</label><!--
+                            --><input id="radio18" type="radio" name="estrellas" value="3"><!--
+                            --><label for="radio18">★</label><!--
+                            --><input id="radio19" type="radio" name="estrellas" value="2"><!--
+                            --><label for="radio19">★</label><!--
+                            --><input id="radio20" type="radio" name="estrellas" value="1"><!--
+                            --><label for="radio20">★</label>
                           </p>
                     </div>
                 </div>
@@ -134,16 +161,16 @@
                     <div class="ranking">
                         <p>Asigne una clasificacion</p>
                         <p class="clasificacion">
-                            <input id="radio1" type="radio" name="estrellas" value="5"><!--
-                            --><label for="radio1">★</label><!--
-                            --><input id="radio2" type="radio" name="estrellas" value="4"><!--
-                            --><label for="radio2">★</label><!--
-                            --><input id="radio3" type="radio" name="estrellas" value="3"><!--
-                            --><label for="radio3">★</label><!--
-                            --><input id="radio4" type="radio" name="estrellas" value="2"><!--
-                            --><label for="radio4">★</label><!--
-                            --><input id="radio5" type="radio" name="estrellas" value="1"><!--
-                            --><label for="radio5">★</label>
+                            <input id="radio21" type="radio" name="estrellas" value="5"><!--
+                            --><label for="radio21">★</label><!--
+                            --><input id="radio22" type="radio" name="estrellas" value="4"><!--
+                            --><label for="radio22">★</label><!--
+                            --><input id="radio23" type="radio" name="estrellas" value="3"><!--
+                            --><label for="radio23">★</label><!--
+                            --><input id="radio24" type="radio" name="estrellas" value="2"><!--
+                            --><label for="radio24">★</label><!--
+                            --><input id="radio25" type="radio" name="estrellas" value="1"><!--
+                            --><label for="radio25">★</label>
                           </p>
                     </div>
                 </div>
@@ -153,16 +180,16 @@
                     <div class="ranking">
                         <p>Asigne una clasificacion</p>
                         <p class="clasificacion">
-                            <input id="radio1" type="radio" name="estrellas" value="5"><!--
-                            --><label for="radio1">★</label><!--
-                            --><input id="radio2" type="radio" name="estrellas" value="4"><!--
-                            --><label for="radio2">★</label><!--
-                            --><input id="radio3" type="radio" name="estrellas" value="3"><!--
-                            --><label for="radio3">★</label><!--
-                            --><input id="radio4" type="radio" name="estrellas" value="2"><!--
-                            --><label for="radio4">★</label><!--
-                            --><input id="radio5" type="radio" name="estrellas" value="1"><!--
-                            --><label for="radio5">★</label>
+                            <input id="radio26" type="radio" name="estrellas" value="5"><!--
+                            --><label for="radio26">★</label><!--
+                            --><input id="radio27" type="radio" name="estrellas" value="4"><!--
+                            --><label for="radio27">★</label><!--
+                            --><input id="radio28" type="radio" name="estrellas" value="3"><!--
+                            --><label for="radio28">★</label><!--
+                            --><input id="radio29" type="radio" name="estrellas" value="2"><!--
+                            --><label for="radio29">★</label><!--
+                            --><input id="radio30" type="radio" name="estrellas" value="1"><!--
+                            --><label for="radio30">★</label>
                           </p>
                     </div>
                 </div>
@@ -172,16 +199,16 @@
                     <div class="ranking">
                         <p>Asigne una clasificacion</p>
                         <p class="clasificacion">
-                            <input id="radio1" type="radio" name="estrellas" value="5"><!--
-                            --><label for="radio1">★</label><!--
-                            --><input id="radio2" type="radio" name="estrellas" value="4"><!--
-                            --><label for="radio2">★</label><!--
-                            --><input id="radio3" type="radio" name="estrellas" value="3"><!--
-                            --><label for="radio3">★</label><!--
-                            --><input id="radio4" type="radio" name="estrellas" value="2"><!--
-                            --><label for="radio4">★</label><!--
-                            --><input id="radio5" type="radio" name="estrellas" value="1"><!--
-                            --><label for="radio5">★</label>
+                            <input id="radio31" type="radio" name="estrellas" value="5"><!--
+                            --><label for="radio31">★</label><!--
+                            --><input id="radio32" type="radio" name="estrellas" value="4"><!--
+                            --><label for="radio32">★</label><!--
+                            --><input id="radio33" type="radio" name="estrellas" value="3"><!--
+                            --><label for="radio33">★</label><!--
+                            --><input id="radio34" type="radio" name="estrellas" value="2"><!--
+                            --><label for="radio34">★</label><!--
+                            --><input id="radio35" type="radio" name="estrellas" value="1"><!--
+                            --><label for="radio35">★</label>
                           </p>
                     </div>
                 </div>
@@ -191,16 +218,16 @@
                     <div class="ranking">
                         <p>Asigne una clasificacion</p>
                         <p class="clasificacion">
-                            <input id="radio1" type="radio" name="estrellas" value="5"><!--
-                            --><label for="radio1">★</label><!--
-                            --><input id="radio2" type="radio" name="estrellas" value="4"><!--
-                            --><label for="radio2">★</label><!--
-                            --><input id="radio3" type="radio" name="estrellas" value="3"><!--
-                            --><label for="radio3">★</label><!--
-                            --><input id="radio4" type="radio" name="estrellas" value="2"><!--
-                            --><label for="radio4">★</label><!--
-                            --><input id="radio5" type="radio" name="estrellas" value="1"><!--
-                            --><label for="radio5">★</label>
+                            <input id="radio36" type="radio" name="estrellas" value="5"><!--
+                            --><label for="radio36">★</label><!--
+                            --><input id="radio37" type="radio" name="estrellas" value="4"><!--
+                            --><label for="radio37">★</label><!--
+                            --><input id="radio38" type="radio" name="estrellas" value="3"><!--
+                            --><label for="radio38">★</label><!--
+                            --><input id="radio39" type="radio" name="estrellas" value="2"><!--
+                            --><label for="radio39">★</label><!--
+                            --><input id="radio40" type="radio" name="estrellas" value="1"><!--
+                            --><label for="radio40">★</label>
                           </p>
                     </div>
                 </div>
