--- a/index.html
+++ b/index.html
@@ -1023,8 +1023,8 @@
     <footer>
         <div id="footer-title">
             <p>Seguir a AUGMENT FASHION</p>
-            <a href="#"><img src="../Images/icons/facebook-icon.png" alt="facebook"></a>
-            <a href="#"><img src="../Images/icons/twitter-icon.png" alt="Twitter"></a>
+            <a href="#"><img src="Images/icons/facebook-icon.png" alt="facebook"></a>
+            <a href="#"><img src="Images/icons/twitter-icon.png" alt="Twitter"></a>
         </div>
         <div id="derechos">
             <small>Todos los derechos reservados Copyright &copy EduardoBautista 2021</small>
