--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <ul>
                 <li class="optionMenu"><a href="index.html">INICIO</a></li>
                 <li class="optionMenu"><a href="Pages/Categorias.html">Categorias</a></li>
-                <li class="optionMenu"><a href="#">¿Quienes Somos?</a></li>
+                <li class="optionMenu"><a href="#">Adios Amor</a></li>
                 <li class="optionMenu"><a href="#">Contacto</a></li>
             </ul>
         </div>
